Fixed search bar wrap

--- a/source/sass/partials/_layout.scss
+++ b/source/sass/partials/_layout.scss
@@ -20,8 +20,7 @@
 }
 
 .search {
-  @include xy-grid;
-  justify-content: center;
+  display: flex;
 }
 
 .game {
